// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntegrationGroup will not display APM links when APM is unavailable 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Check Infrastructure UI for this montor's ip address"
      iconType="infraApp"
      message="Show host metrics"
      tooltipContent="Check Infrastructure UI for the IP \\"\\""
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Check Infrastructure UI for this monitor's pod UID"
      iconType="infraApp"
      message="Show pod metrics"
      tooltipContent="Check Infrastructure UI for pod UID \\"\\"."
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Check Infrastructure UI for this monitor's container ID"
      iconType="infraApp"
      message="Show container metrics"
      tooltipContent="Check Infrastructure UI for container ID \\"\\""
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Show pod logs"
      iconType="loggingApp"
      message="Show pod logs"
      tooltipContent="Check for logs for pod UID \\"\\""
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Show container logs"
      iconType="loggingApp"
      message="Show container logs"
      tooltipContent="Check Logging UI for container ID \\"\\""
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`IntegrationGroup will not display infra links when infra is unavailable 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Search APM for this monitor"
      href="/foo/app/apm#/services?kuery=url.domain:%20%22undefined%22&rangeFrom=now-12m&rangeTo=now-1m"
      iconType="apmApp"
      message="Check APM for domain"
      tooltipContent="Click here to check APM for the domain \\"\\"."
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Show pod logs"
      iconType="loggingApp"
      message="Show pod logs"
      tooltipContent="Check for logs for pod UID \\"\\""
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Show container logs"
      iconType="loggingApp"
      message="Show container logs"
      tooltipContent="Check Logging UI for container ID \\"\\""
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`IntegrationGroup will not display logging links when logging is unavailable 1`] = `
<EuiFlexGroup
  direction="column"
>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Search APM for this monitor"
      href="/foo/app/apm#/services?kuery=url.domain:%20%22undefined%22&rangeFrom=now-12m&rangeTo=now-1m"
      iconType="apmApp"
      message="Check APM for domain"
      tooltipContent="Click here to check APM for the domain \\"\\"."
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Check Infrastructure UI for this montor's ip address"
      iconType="infraApp"
      message="Show host metrics"
      tooltipContent="Check Infrastructure UI for the IP \\"\\""
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Check Infrastructure UI for this monitor's pod UID"
      iconType="infraApp"
      message="Show pod metrics"
      tooltipContent="Check Infrastructure UI for pod UID \\"\\"."
    />
  </EuiFlexItem>
  <EuiFlexItem>
    <IntegrationLink
      ariaLabel="Check Infrastructure UI for this monitor's container ID"
      iconType="infraApp"
      message="Show container metrics"
      tooltipContent="Check Infrastructure UI for container ID \\"\\""
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;
